@@ -1,3 +1,7 @@
+2005-08-18  Michal Nazarewicz  (mina86/AT/tlen.pl)
+
+	* malloc.c: Signal handler added
+
 2005-08-13  Michal Nazarewicz  (mina86/AT/tlen.pl)
 
 	* Makefile: targets for install, uninstall added
